# codebase-rag

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini  sonar-project.properties
.github/workflows/: ci.yml
docker/: Dockerfile  compose-dev.yml  entrypoint.sh
docs/: adr-chunking-strategy.md  adr-index.md  adr-langchain.md  adr-langfuse.md  adr-qdrant.md  chat_storage.md  configuration.md  end_to_end_testing.md  evaluation-results.md  getting-started.md
evals/: results.md  results_large_model.json  results_large_model.md  results_small_model.json  results_small_model.md  run_eval.py  testset.json
scripts/: ingest.py  sonar_report.sh  sonar_setup.sh
src/codebase_rag/: __init__.py  config.py
src/codebase_rag/app/: __init__.py  components.py  main.py
src/codebase_rag/data_ingestion/: __init__.py  chunking.py  document_processor.py  git_loader.py  pipeline.py
src/codebase_rag/database/: __init__.py  chat_storage.py  embeddings.py  qdrant_store.py  sqlite_storage.py  vector_store_protocol.py
src/codebase_rag/llm/: __init__.py  ollama_client.py  rag_chain.py
src/codebase_rag/retrieval/: __init__.py  bm25_search.py  hybrid_search.py  vector_search.py
tests/: __init__.py
tests/e2e/: test_e2e_smoke.py  test_ingest_script.py  test_streamlit_app.py
tests/evaluation/: test_dataset.py  test_response_quality.py  test_retrieval_quality.py
tests/evaluation/data/: test_questions.json
tests/integration/: test_chat_storage.py  test_conversation_memory.py  test_data_pipeline.py  test_retrieval_chain.py
tests/performance/: test_retrieval_performance.py
tests/unit/: test_app_components.py  test_components_extended.py  test_database.py  test_local_folder_ingestion.py  test_main_app.py  test_namespace_guard.py  test_ollama_generator.py  test_pipeline.py  test_remaining_coverage.py
